force-app/main/default/objects/Meeting__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account (company/organization) associated with this meeting</description>
    <inlineHelpText>Select the account this meeting is related to. Typically the hospital, clinic, or healthcare organization where the meeting took place.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Meetings</relationshipLabel>
    <relationshipName>Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>