force-app/main/default/objects/Meeting__c/fields/Attendees_Count__c.field-meta.xml
<CustomField>
    <fullName>Attendees_Count__c</fullName>
    <description>Total number of people who attended the meeting</description>
    <inlineHelpText>Enter the total number of attendees at the meeting. Include all participants (healthcare professionals, staff, your colleagues, etc.).</inlineHelpText>
    <label>Attendees Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>