force-app/main/default/objects/Meeting__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary contact person who attended or will attend the meeting</description>
    <inlineHelpText>Select the primary contact you met with. Typically the healthcare professional, decision maker, or key stakeholder for this meeting.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Meetings</relationshipLabel>
    <relationshipName>Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>