force-app/main/default/objects/Meeting__c/fields/Follow_Up_Required__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a follow-up meeting or action is needed</description>
    <inlineHelpText>Check this box if a follow-up meeting, call, or action is required. Use the Next Steps field to document what follow-up is needed.</inlineHelpText>
    <label>Follow Up Required</label>
    <type>Checkbox</type>
</CustomField>