force-app/main/default/objects/Meeting__c/fields/Marketing_Materials_Provided__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Materials_Provided__c</fullName>
    <description>Indicates whether marketing materials or literature were provided during the meeting</description>
    <inlineHelpText>Select Yes if you provided brochures, pamphlets, clinical studies, or other marketing materials during this meeting. Select No if no materials were provided.</inlineHelpText>
    <label>Marketing Materials Provided</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>