force-app/main/default/objects/Meeting__c/fields/Meeting_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Outcome__c</fullName>
    <description>Overall assessment of how productive or successful the meeting was</description>
    <inlineHelpText>Rate the overall outcome of the meeting. Very Productive: Exceeded expectations. Productive: Met objectives. Neutral: Standard meeting. Needs Follow-up: Requires additional action. Unsuccessful: Did not meet objectives.</inlineHelpText>
    <label>Meeting Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very Productive</fullName>
            </value>
            <value>
                <fullName>Productive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Needs Follow-up</fullName>
            </value>
            <value>
                <fullName>Unsuccessful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>