force-app/main/default/objects/Meeting__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <description>Action items, follow-up tasks, or next steps agreed upon during the meeting</description>
    <inlineHelpText>Document any action items, follow-up tasks, or next steps that were agreed upon during the meeting. Include who is responsible and any deadlines discussed.</inlineHelpText>
    <label>Next Steps</label>
    <type>TextArea</type>
</CustomField>