force-app/main/default/objects/Meeting__c/fields/Product_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Product_Discussed__c</fullName>
    <description>Name or description of the product(s) or service(s) discussed during the meeting</description>
    <inlineHelpText>Enter the name of the product, drug, medical device, or service that was discussed during this meeting. For multiple products, separate with commas.</inlineHelpText>
    <label>Product Discussed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>