force-app/main/default/objects/Meeting__c/fields/Product_Focus__c.field-meta.xml
<CustomField>
    <fullName>Product_Focus__c</fullName>
    <label>Product Focus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>