force-app/main/default/objects/Meeting__c/fields/Signature_Obtained__c.field-meta.xml
<CustomField>
    <fullName>Signature_Obtained__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a signature was obtained during the meeting</description>
    <inlineHelpText>Check this box if you obtained a signature on any documents, forms, or agreements during this meeting (e.g., sample acknowledgment forms, consent forms).</inlineHelpText>
    <label>Signature Obtained</label>
    <type>Checkbox</type>
</CustomField>