force-app/main/default/objects/Meeting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Meeting_Date__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Product_Focus__c</columns>
    <columns>Description__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Meeting_Outcome__c</columns>
    <columns>Next_Steps__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>